Silence of the Errors (#66)
* Adjusting compilation parameters.

* Fixing warnings all over the place.

* Adding private constructor

* Silence unchecked cast.

* Silence a text-dump from maven